--- a/inst/exerciceML/exerciceML.qmd
+++ b/inst/exerciceML/exerciceML.qmd
@@ -15,18 +15,18 @@ embed-resources: true
 ## Partie 1 : Classification supervisée
 
 ::: callout-tip
-
 ## Mise en situation 1
 
 *Vous avez été embauché par le CIVB (comité interprofessionnel des vins de Bordeaux) pour mettre en place un algorithme qui permet de prévoir la qualité du vin en fonction de sa composition chimique. Vous disposez d'une base de données brute avec des références de vins de Bordeaux, chacune ayant été évaluée par des professionnel avec une note entre 1 et 10. A partir de 6, le vin est considéré comme bon, en dessous de 6, il est considéré comme mauvais.*
-
 :::
 
 *Etape 1 : Dans l'onglet "données" : cliquer pour explorer la base de données sur les vins.*
 
 ### Combien d'individus dans la base de donnéees brute vins ?
 
-La base de données brute "vins" est constituées de `r nrow(vins)` individus : ces individus sont des références de vins qui ont été goûtés et notés par des professionels. Ils sont caractérisés par une note et leur composition chimique.
+::: {style="color: blue;"}
+La base de données brute "vins" est constituées de 4 898 individus : ces individus sont des références de vins qui ont été goûtés et notés par des professionels. Ils sont caractérisés par une note et leur composition chimique.
+:::
 
 ### Quelle est la variable à prédire ? De quel type est-elle ?
 
@@ -38,7 +38,7 @@ Non : parmi les 4 898 références goûtés par des professionnels, 3 258 sont 
 
 ### Combien y a t il de variables prédictives ? De quel type sont-elles ?
 
-Il y a 11 variables quantitatives qui sont les compositions chimique du vin.
+Il y a 11 variables quantitatives continues qui sont les compositions chimique du vin.
 
 ### Y a-t-il des données manquantes ?
 
@@ -48,13 +48,13 @@ Aucune donnée manquante dans ce jeu de données : c'est très rare d'avoir une 
 
 ### A quoi vont servir les bases d'entraînement et de validation ?
 
-La base d'entraînement et la base de validation sont utilisés pendant la phase d'apprentissage : les modèles testés (regression logistique, arbre de classification, forêt..) sont ajustés sur la base d'entraînement (70% de la base brute dans notre exemple) et les performances de ces modèles sont mesurés à partir des prévisions de ces modèles sur la base de validation (15% de la base brute).
+La base d'entraînement et la base de validation sont utilisées pendant la phase d'apprentissage : les modèles testés (regression logistique, arbre de classification, forêt..) sont ajustés sur la base d'entraînement (70% de la base brute dans notre exemple) et les performances de ces modèles sont mesurés à partir des prévisions de ces modèles sur la base de validation (15% de la base brute).
 
 ### A quoi sert la base de test ?
 
 Les individus appartenant à la base de test ne vont pas du tout servir à choisir le modèle le plus performant : ce sont des données complètement extérieures, qui permettent de se mettre en condition réelle avant la généralisation (ou la mise en production) de l'algorithme retenu le plus performant.
 
-### Quel est le poids de chacune des modalités de la variable à prédire dans la base d'entraînement ? Comparer avec la répartition dans la base brute.
+### Quel est le poids des modalités de la variable à prédire dans la base d'entraînement ? Comparer avec la répartition dans la base brute.
 
 Le poids de chacune des modalités est le même dans la base d'entraînement que dans la base brute, ce qui signifie que le tirage des individus a été contraint.
 
@@ -82,7 +82,9 @@ Par défaut, si la probabilité d'une modalité est supérieure à 0,5, c'est ce
 
 ### Quel indicateur nous donne des informations sur la qualité du modèle ?
 
-*Etape 5 : Dans l'onglet "Validation", évaluer la performance du modèle retenu précédemment (modèle 1 : regression logistique sur la base centrée réduite).*
+L'AIC (Akaike information criterion) nous donne un indicateur de qualité du modèle : en plus de sa capacité à faire de bonnes estimations, il prend en compte la complexité du modèle, c'est à dire le nombre de variables et de modalités pour une régression logistique. La complexité du modèle va pénaliser l'AIC. Plus il est proche de 0, meilleur est sa qualité. Il est difficile à interpréter tout seul : il faudrait essayer de retirer des variables pour voir quel est le meilleur modèle (en enlevant des redondances).
+
+*Etape 5 : Dans l'onglet "Validation", évaluer la performance du modèle retenu précédemment (modèle 1 : régression logistique sur la base centrée réduite).*
 
 ### Combien d'individus sont classés dans la table de confusion ? A quelle base ces individus appartiennent-ils ?
 
@@ -111,7 +113,7 @@ $$
 ### Compléter le tableau suivant avec les performances de ce première modèle.
 
 | Modèle testé                       | Exactitude | Sensibilité | Spécificité | AUC  |
-|-------------------------|------------|------------|------------|------------|
+|--------------------|-------------|-------------|-------------|-------------|
 | *Modèle 1 : Regression logistique* | 77 %       | 90 %        | 52 %        | 0,83 |
 
 : Performances de la regression logistique
@@ -129,7 +131,7 @@ $$
 ### Compléter le tableau suivant avec les performances de ce deuxi-me modèle.
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|--------------------------|------------|------------|------------|------------|
+|--------------------|-------------|-------------|-------------|-------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 
@@ -150,7 +152,7 @@ Chaque arbre est constitué par défaut de 3 variables tirées aléatoirement (M
 ### Noter les indicateurs de performance de ce troisième modèle dans le tableau comparatif ci-dessous :
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|--------------------------|------------|------------|------------|------------|
+|--------------------|-------------|-------------|-------------|-------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 | *Modèle 3 : forêt aléatoire*         | 83 %       | 90 %        | 70 %        | 0,89 |
@@ -164,7 +166,7 @@ Par défaut, la valeur retenue par l'algorithme est 5.
 ### Noter les indicateurs dans le tableau comparatif des modèles
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|--------------------------|------------|------------|------------|------------|
+|--------------------|-------------|-------------|-------------|-------------|
 | *Modèle 1 : Regression logistique*   | 77 %       | 90 %        | 52 %        | 0,83 |
 | *Modèle 2 : arbre de classification* | 76 %       | 80 %        | 67 %        | 0,77 |
 | *Modèle 3 : forêt aléatoire*         | 83 %       | 90 %        | 70 %        | 0,89 |
@@ -183,7 +185,7 @@ Non. Le modèle final s'ajuste sur la base d'entraînement (70 % des données) e
 ***Mise en situation 2 :** Vous êtes le gouverneur de Grandile, la plus grande île de l'archipel de Ceph'ile. Vous disposez d'une base de données avec des informations sur 5 418 ménages habitants à Grandile, et notamment vous savez si ce ménage est pauvre ou non. Vous voulez être en capacité de prédire si un nouveau ménage est pauvre à partir des informations socio-économiques que vous aurez collectées.*
 
 | Modèle testé                         | Exactitude | Sensibilité | Spécificité | AUC  |
-|--------------------------|------------|------------|------------|------------|
+|--------------------|-------------|-------------|-------------|-------------|
 | *Modèle 1 : Regression logistique*   | 99 %       | 100 %       | 98 %        | 1    |
 | *Modèle 2 : arbre de classification* | 99 %       | 100 %       | 94 %        | 0,98 |
 | *Modèle 3 : forêt aléatoire*         | 99 %       | 100 %       | 98 %        | 1    |
@@ -202,11 +204,9 @@ Dans ce cas, autant choisir un modèle économe en ressources informatiques. Le 
 ## Partie 2 : Régression supervisée
 
 ::: callout-tip
-
 ## Mise en situation
 
 *Vous cherchez à prévoir le niveau de pollution à Rennes à partir de donnnées sur les températures, nébulosité et le niveau de pollution de la veille. Le niveau de pollution se mesure par le taux d'ozone, les relevés de températures se font à plusieurs heures de la journée, tout comme la mesure de la nébulosité (durée d'ensoleillement). Dans la base de données ozone, vous disposez de plus d'un millier de relevés qui ont été effectués, à partir desquels vous devez élaborer le modèle de prévision le plus performant possible.*
-
 :::
 
 *Etape 1 : Dans l'onglet "données" : cliquer pour explorer la base de données ozone.*
@@ -290,7 +290,7 @@ Difficile à dire : on peut regarder le RMSE, qui nous dit qu'en moyenne, les pr
 ### Compléter le tableau ci-dessous avec les performances des autres modèles :
 
 | Modèle testé sur la base avec imputation par la moyenne |  RSS   | MSE | RMSE |  R²  |
-|--------------------------------------|:-------:|:-------:|:-------:|:-------:|
+|-----------------------------|:---------:|:---------:|:---------:|:---------:|
 | *Modèle 1 : Forêt aléatoire*[^1]                        | 39 362 | 192 | 13,9 | 0,71 |
 | *Modèle 2 : Arbre de regression*                        | 56 900 | 278 | 16,7 | 0,59 |
 | *Modèle 3 : Régression linéaire*                        | 45 416 | 222 | 14,9 | 0,68 |
